@@ -1,9 +1,6 @@
 SportsTracker-TODO
 ==================
 
-Exercise Dialog: add Warning message when user stores an exercise without
-  an selected equipment (if there is one for the current sport type)
-
 macOS Catalina problem:
 - when using a non-hidpi display (e.g. a 24" 1920x1200) the text rendering looks broken
   - the antialiased text in labels, menus and text fields looks like vertical pixel
