@@ -2,7 +2,7 @@
 # SportsTracker resources for english language (default)
 #
 # Version: SportsTracker 7.7.1
-# Last update: 2019/12/28
+# Last update: 2020/01/01
 #
 # (C) 2020, Stefan Saring
 #####################################################################
@@ -288,12 +288,13 @@ st.dlg.exercise.error.ascent=You need to enter a valid ascent!
 st.dlg.exercise.error.descent=You need to enter a valid descent!
 st.dlg.exercise.error.avg_heartrate=You need to enter a valid average heartrate!
 st.dlg.exercise.error.calories=You need to enter a valid amount for calorie consumption!
-st.dlg.exercise.error.import_console=Failed to read or parse HRM file '%s'.\nSee console output for more detailed informations.
+st.dlg.exercise.error.import_console=Failed to read or parse HRM file '%s'.\nSee console output for more detailed information.
 st.dlg.exercise.error.no_sport_type=You need to select a sport type!
 st.dlg.exercise.error.no_sport_subtype=You need to select a sport subtype!
 st.dlg.exercise.error.no_intensity=You need to select an intensity!
 st.dlg.exercise.error.no_sport_and_subtype=You need to select a sport type and subtype first!
 st.dlg.exercise.error.no_previous_exercise=Can't find a comment in a previous similar exercise.
+st.dlg.exercise.info.no_equipment=Do you want to store without an equipment selection?
 
 st.dlg.hrm_file_open.title=Select HRM File
 st.dlg.hrm_file_open.filter_all_files=All files
