@@ -2,7 +2,7 @@
 # SportsTracker resources for german language
 #
 # Version: SportsTracker 7.7.1
-# Last update: 2019/12/31
+# Last update: 2020/01/01
 #
 # (C) 2020, Stefan Saring
 # Translated by Stefan Saring <projects@saring.de>
@@ -293,6 +293,7 @@ st.dlg.exercise.error.no_sport_subtype=Sie müssen eine Sportunterart wählen!
 st.dlg.exercise.error.no_intensity=Sie müssen eine Intensität wählen!
 st.dlg.exercise.error.no_sport_and_subtype=Sie müssen zuerst eine Sportart und Sportunterart wählen!
 st.dlg.exercise.error.no_previous_exercise=Es wurde keine Bemerkung in einer vorigen ähnlichen Einheit gefunden.
+st.dlg.exercise.info.no_equipment=Möchten Sie ohne der Auswahl einer Ausrüstung speichern?
 
 st.dlg.hrm_file_open.title=HRM Datei wählen
 st.dlg.hrm_file_open.filter_all_files=Alle Dateien
